# SunStone

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment.yml
backend/: NOTES_BACKENDS.md  NOTES_TRANSLATION.md  README.md  pyproject.toml
backend/src/sunstone_backend/: cli.py  hardware.py  jobs.py  settings.py  store.py  worker.py
backend/tests/: test_api_cancel.py  test_api_dispersion_endpoints.py  test_api_dispersion_zip.py  test_api_submit_approximate_complex.py  test_backend_capabilities_extended.py  test_backends_api.py  test_backends_materials_handling.py  test_backends_registry.py  test_backends_run_smoke.py  test_boundary_perface_spec.py  test_examples_present.py  test_geodesics_schwarzschild.py  test_gradients.py  test_job_cancel_api.py  test_job_endpoint.py  test_job_status_api.py  test_job_stream.py  test_jobs_translation_injection.py  test_materials_api.py  test_materials_expand_batch.py  test_meep_advanced_materials.py  test_meep_approximate_complex.py  test_meep_backend_perface_application.py  test_mesh_api.py  test_mesher_endpoint.py  test_metrics_endpoint.py  test_plebanski.py  test_plebanski_kerr.py  test_safe_join.py  test_ssh_auth_args.py  test_ssh_cancel.py  test_ssh_retry.py  test_ssh_runner.py  test_store.py  test_submit_backend_options.py  test_submit_injects_translations.py  test_submit_spec_override.py  test_submit_ssh.py  test_submit_ssh_options.py  test_synthesis_backend.py  (+10 more)
backend/tests/examples/: ceviche.json  dummy_perface.json  meep.json  meep_perface.json  (+4 more)
backend/tools/: run_tests_watchdog.py
(+180 files in other folders)
